add syntax highlighting styesheet

--- a/css/site.scss
+++ b/css/site.scss
@@ -3,6 +3,7 @@
 @import "bourbon/bourbon";
 @import "variables";
 @import "mixins";
+@import "syntax";
 
 // =========== GENERAL STYLING ========= //
 
