add link to blog in nav

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -40,6 +40,9 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
             <a href="{{navPrefix}}#portfolio">Portfolio</a>
           </li>
           <li>
+            <a href="/posts">Blog</a>
+          </li>
+          <li>
             <a href="{{layout.email_href}}" target="_blank">Contact</a>
           </li>
         </ul>
