fix responsive for site header

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,7 +21,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{navPrefix}}#page-top">Mark Monteiro</a>
+        <a class="navbar-brand hidden-sm" href="{{navPrefix}}#page-top">Mark Monteiro</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
