--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -40,7 +40,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
             <a href="{{navPrefix}}#portfolio">Portfolio</a>
           </li>
           <li>
-            <a href="/posts">Blog</a>
+            <a href="/posts.html">Blog</a>
           </li>
           <li>
             <a href="{{layout.email_href}}" target="_blank">Contact</a>
