--- a/_includes/portfolio-items.html
+++ b/_includes/portfolio-items.html
@@ -20,7 +20,7 @@ I hate this. Must fix later.
 
 	<div class="col-sm-4 col-sm-offset-{{offset}} portfolio-item">
 	    <button type="button" class="btn btn-link portfolio-link" data-toggle="modal" data-target="#{{projectId}}">
-	        <div class="caption fa fa-search-plus"></div>
+	        <span class="caption fa fa-search-plus"></span>
 	        <img src="/img/projects/{{projectId}}.png" class="img-responsive" alt="{{project.title}} Logo">
 	    </button>
 	</div>
