--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -1,6 +1,6 @@
 {% for project in site.projects %}
     {% assign projectId = project.id | split: '/' | last %}
-	<div class="portfolio-modal modal fade" id="{{projectId}}" tabindex="-1" role="dialog" aria-hidden="true" aria-labelled-by="{{projectId}}-title">
+	<div class="portfolio-modal modal fade" id="{{projectId}}" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="{{projectId}}-title">
         <div class="modal-content" role="document">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
