--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -35,7 +35,10 @@
                             {% endfor %}
                         </ul>
                         <p class='text-center'>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                <span class="fa fa-tspanmes"></span>
+                                Close
+                            </button>
                         </p>
                     </div>
                 </div>
