--- a/css/vertical-timeline.scss
+++ b/css/vertical-timeline.scss
@@ -75,10 +75,12 @@
 		left: 10px;
 		width: 20px;
 		height: 20px;
+		text-align: center;
 		//Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
 		border-radius: 50%;
 		background-color: white;
 		border: 4px solid #d7e4ed;
+		.fa { display: none; }
 		~ .cd-timeline-content::before {
 			top: 8px;
 		}
@@ -285,14 +287,19 @@ html.cssanimations {
 		}
 
 		.cd-timeline-point {
-			width: 30px;
-			height: 30px;
+			$diameter: 40px;
+			width: $diameter;
+			height: $diameter;
 			left: 50%;
-			margin-left: -15px;
+			margin-left: -$diameter/2;
 			-webkit-transform: translateZ(0);
 			-webkit-backface-visibility: hidden;
 			~ .cd-timeline-content::before {
 				top: 12px;
+			}
+			.fa {
+				display: inline-block;
+				line-height: $diameter - 7px;
 			}
 		}
 		.cd-timeline-img {
@@ -319,7 +326,7 @@ html.cssanimations {
 				position: absolute;
 				width: 100%;
 				left: 122%;
-				top: 6px;
+				top: 12px;
 				font-size: 16px;
 				font-size: 1rem;
 			}
