--- a/_includes/experience-timeline.html
+++ b/_includes/experience-timeline.html
@@ -14,6 +14,7 @@
             <h2>{{experience.title}}</h2>
             <h3>{{experience.company}}</h3>
             <span class='cd-timeline-location'>{{experience.location}}</span>
+            <div class="cd-date">{{experience.dates}}</div>
             {{experience.content}}
             {% if experience.projects or experience.external_projects %}
                 <div class="projects">
@@ -44,7 +45,6 @@
                     </ul>
                 </div>
             {% endif %}
-            <span class="cd-date">{{experience.dates}}</span>
         </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
 {% endfor %}
