Remove all target="_blank" links from site

--- a/_includes/experience-timeline.html
+++ b/_includes/experience-timeline.html
@@ -30,7 +30,7 @@
                         {% endfor %}
 
                         {% for project in experience.external_projects %}
-                            <li><a href="http://{{project.url}}" target='_blank' title='{{project.name}} Website'>{{project.url}}</a></li>
+                            <li><a href="http://{{project.url}}" title='{{project.name}} Website'>{{project.url}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
