--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -17,11 +17,11 @@
                         <dl class="details dl-horizontal">
                             {% if project.website %}
                                 <dt>Website</dt>
-                                <dd><a href="{{project.website}}" target="_blank">{{project.website}}</a></dd>
+                                <dd><a href="{{project.website}}">{{project.website}}</a></dd>
                             {% endif %}
                             {% if project.source %}
                                 <dt>Source</dt>
-                                <dd><a href="{{project.source}}" target="_blank">{{project.source}}</a></dd>
+                                <dd><a href="{{project.source}}">{{project.source}}</a></dd>
                             {% endif %}
                             <dt>Developed</dt>
                             <dd>{{project.developed}}</dd>
