Optimize images on site

--- a/_includes/portfolio-items.html
+++ b/_includes/portfolio-items.html
@@ -21,7 +21,7 @@ I hate this. Must fix later.
 	<div class="col-sm-4 col-sm-offset-{{offset}} portfolio-item">
 	    <button type="button" class="btn btn-link portfolio-link" data-toggle="modal" data-target="#{{projectId}}">
 	        <span class="caption fa fa-search-plus"></span>
-	        <img src="/img/projects/{{projectId}}.png" class="img-responsive" alt="{{project.title}} Logo">
+	        <img src="/img/projects/{{projectId}}.jpg" class="img-responsive" alt="{{project.title}} Logo">
 	    </button>
 	</div>
 {% endfor %}
