--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -13,7 +13,7 @@
                     <div class="modal-body col-lg-8 col-lg-offset-2">
                         <h2 id='{{projectId}}-title' class='text-center'>{{project.title}}</h2>
                         <hr class="hr-primary">
-                        <img src="img/projects/{{projectId}}.png" class="img-responsive" alt="{{project.title}} Logo">
+                        <img src="img/projects/{{projectId}}.jpg" class="img-responsive" alt="{{project.title}} Logo">
                         <dl class="details dl-horizontal">
                             {% if project.website %}
                                 <dt>Website</dt>
