--- a/css/vertical-timeline.scss
+++ b/css/vertical-timeline.scss
@@ -14,7 +14,7 @@
         height: 200px;
         line-height: 200px;
         text-align: center;
-        background: #303e49;
+        background: $dark-blue;
         h1 {
             color: white;
             font-size: 18px;
@@ -144,13 +144,13 @@
         }
         h2 {
             margin: 0;
-            color: #303e49;
+            color: $dark-blue;
             font-size: 20px;
             font-size: 1.25rem;
         }
         h3 {
             margin: 0;
-            color: #303e49;
+            color: $dark-blue;
             font-size: 17px;
             font-size: 1.1rem;
         }
