--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,7 @@
   <!-- Page-Specific CSS -->
   {% if page.custom_css %}
     {% for stylesheet in page.custom_css %}
-    <link rel="stylesheet" href="/css/{{ stylesheet }}" media="screen" type="text/css">
+    <link rel="stylesheet" href="/css/{{ stylesheet }}" type="text/css">
     {% endfor %}
   {% endif %}
 
