--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -1,4 +1,3 @@
-@import "bourbon/bourbon";
 @import "variables";
 
 // Convert pixels to em
@@ -11,18 +10,18 @@
 @mixin vertical-center() {
   position: absolute;
   top: 50%;
-  @include transform(translateY(-50%));
+  transform: translateY(-50%);
 }
 @mixin horizontal-center() {
   position: absolute;
   left: 50%;
-  @include transform(translateX(-50%));
+  transform: translateX(-50%);
 }
 @mixin absolute-center() {
   position: absolute;
   top: 50%;
   left: 50%;
-  @include transform(translate(-50%, -50%));
+  transform: translate(-50%, -50%);
 }
 
 // keep boostrap horizontal styling on small screens
