--- a/css/site.scss
+++ b/css/site.scss
@@ -1,6 +1,5 @@
 ---
 ---
-@import "bourbon/bourbon";
 @import "variables";
 @import "mixins";
 @import "syntax";
@@ -72,7 +71,7 @@ hr {
   font-size: 20px;
   color: #fff;
   background: 0 0;
-  @include transition(all .3s ease-in-out);
+  transition: all .3s ease-in-out;
   &:hover, &:focus, &:active, &.active {
     border: solid 2px #fff;
     color: $green;
@@ -108,18 +107,18 @@ hr {
 .vertical-center {
   position: absolute;
   top: 50%;
-  @include transform(translateY(-50%));
+  transform: translateY(-50%);
 }
 .horizontal-center {
   position: absolute;
   left: 50%;
-  @include transform(translateX(-50%));
+  transform: translateX(-50%);
 }
 .absolute-center {
   position: absolute;
   top: 50%;
   left: 50%;
-  @include transform(translate(-50%, -50%));
+  transform: translate(-50%, -50%);
 }
 
 // ============ NAVBAR =========== //
@@ -146,10 +145,10 @@ hr {
 @media (min-width: 768px) {
   .navbar-fixed-top {
     padding: 25px 0;
-    @include transition(all .3s);
+    transition: all .3s;
     .navbar-brand {
       font-size: 2em;
-      @include transition(all .3s);
+      transition: all .3s;
     }
     &.navbar-shrink {
       padding: 10px 0;
