--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -6,7 +6,7 @@
   color: #fff;
   background-image: 
     linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url('../img/header-blur.jpg');
+    url('../img/header.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
