--- a/_sass/components/_vertical-timeline.scss
+++ b/_sass/components/_vertical-timeline.scss
@@ -158,8 +158,9 @@
     font-size: 17px;
     font-size: 1.1rem;
   }
-  p {
-    margin: 1em 0;
+  p,
+  p + ul {
+    margin: 0.5em 0;
     line-height: 1.6;
     font-size: 1rem;
   }
