--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -7,6 +7,9 @@ $blue: #2c3e50;
 $dark-blue: #303e49;
 $green: #1f816e;
 
+$brand-primary: $blue;
+$brand-info:    $green;
+
 // Fonts //
 $font-size-base: 15px;
 $montserrat: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
