--- a/_sass/components/_vertical-timeline.scss
+++ b/_sass/components/_vertical-timeline.scss
@@ -190,28 +190,28 @@ html.cssanimations {
     }
     .cd-timeline-img.bounce-in {
       visibility: visible;
-      animation: cd-bounce-1 0.6s;
+      animation: expand-bounce 0.6s;
     }
     .cd-timeline-point.bounce-in {
       visibility: visible;
-      animation: cd-bounce-1 0.6s;
+      animation: expand-bounce 0.6s;
     }
     .cd-timeline-content.bounce-in {
       visibility: visible;
-      animation: cd-bounce-2-inverse 0.6s;
+      animation: slide-bounce-inverse 0.6s;
     }
     @media only screen and(min-width: 1170px) {
 
       .cd-timeline-content.bounce-in .cd-date {
-        animation: cd-bounce-2-double 0.6s;
+        animation: slide-bounce-double 0.6s;
       }
 
       &:nth-child(odd) {
         .cd-timeline-content.bounce-in {
-          animation: cd-bounce-2 0.6s;
+          animation: slide-bounce 0.6s;
         }
         .cd-timeline-content.bounce-in .cd-date {
-          animation: cd-bounce-2-double-inverse 0.6s;
+          animation: slide-bounce-double-inverse 0.6s;
         }
       }
     }
@@ -319,7 +319,7 @@ html.cssanimations {
   }
 }
 
-@keyframes cd-bounce-1 {
+@keyframes expand-bounce {
   0% {
     opacity: 0;
     transform: scale(0.5);
@@ -333,7 +333,7 @@ html.cssanimations {
   }
 }
 
-@keyframes cd-bounce-2 {
+@keyframes slide-bounce {
   0% {
     opacity: 0;
     transform: translateX(-100px);
@@ -346,7 +346,7 @@ html.cssanimations {
     transform: translateX(0);
   }
 }
-@keyframes cd-bounce-2-inverse {
+@keyframes slide-bounce-inverse {
   0% {
     opacity: 0;
     transform: translateX(100px);
@@ -359,7 +359,7 @@ html.cssanimations {
     transform: translateX(0);
   }
 }
-@keyframes cd-bounce-2-double {
+@keyframes slide-bounce-double {
   0% {
     opacity: 0;
     transform: translateX(-100px * 2);
@@ -372,7 +372,7 @@ html.cssanimations {
     transform: translateX(0);
   }
 }
-@keyframes cd-bounce-2-double-inverse {
+@keyframes slide-bounce-double-inverse {
   0% {
     opacity: 0;
     transform: translateX(100px * 2);
