--- a/_sass/components/_vertical-timeline.scss
+++ b/_sass/components/_vertical-timeline.scss
@@ -148,14 +148,17 @@
   h2 {
     margin: 0;
     color: $dark-blue;
-    font-size: 20px;
     font-size: 1.25rem;
   }
   h3 {
     margin: 0;
     color: $dark-blue;
-    font-size: 17px;
     font-size: 1.1rem;
+  }
+  ul {
+    @media (max-width: 400px) {
+      padding-left: $grid-gutter-width/2;
+    }
   }
   p,
   p + ul {
