--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body id="page-top" class="index">
+  <body data-section-id="#page-top" class="index">
 
     {{ content }}
 
