--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -87,7 +87,7 @@
 
 // =========== ABOUT SECTION =========== //
 
-#about {
+[data-section-id="#about"] {
   img.portrait {
     margin: 0 auto;
     width: 75%;
@@ -120,7 +120,7 @@
 
 // =========== RESUME SECTION =========== //
 
-#resume {
+[data-section-id="#resume"] {
   .projects ul, .technologies ul {
     display: inline;
     margin: 0;
@@ -145,49 +145,45 @@
 
 // =========== PORTFOLIO SECTION =========== //
 
-#portfolio {
-  .portfolio-item {
-    right: 0;
-    margin-bottom: 15px;
-    .portfolio-link {
-      display: block;
-      position: relative;
-      margin: 0 auto;
-      max-width: 400px;
-      padding: 0;
+.portfolio-item {
+  right: 0;
+  margin-bottom: 15px;
 
-      .caption {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(24, 188, 156, 0.9);
-        opacity: 0;
-        transition: opacity .5s;
+  .portfolio-link {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    max-width: 400px;
+    padding: 0;
 
-        &:hover {
-          opacity: 1;
-        }
+    .caption {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(24, 188, 156, 0.9);
+      opacity: 0;
+      transition: opacity .5s;
 
-        &:before {
-          font-family: FontAwesome; // stylelint-disable-line font-family-no-missing-generic-family-keyword
-          content: "\f00e"; // fa-search-plus
-          display: inline-block;
-          @include absolute-center();
-          color: white;
-          font-size: 3em;
-        }
+      &:hover {
+        opacity: 1;
+      }
+
+      &:before {
+        font-family: FontAwesome; // stylelint-disable-line font-family-no-missing-generic-family-keyword
+        content: "\f00e"; // fa-search-plus
+        display: inline-block;
+        @include absolute-center();
+        color: white;
+        font-size: 3em;
       }
     }
-  }
-  * {
-    z-index: 2;
   }
 }
 
 @media (min-width: 767px) {
-  #portfolio .portfolio-item {
+  .portfolio-item {
     margin-bottom: 30px;
   }
 }
