Do not restart pace loading on location change

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Loading bar (http://github.hubspot.com/pace/) -->
+  <script>
+    paceOptions = { restartOnPushState: false }
+  </script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
 
   <!-- Google Analytics -->
