Define links consistently in header nav

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,13 +21,13 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li class="page-scroll">
-            <a href="{{ '#about' | absolute_url }}">About</a>
+            <a href="{{site.url}}#about">About</a>
           </li>
           <li class="page-scroll">
-            <a href="{{ '#resume' | absolute_url }}">Experience</a>
+            <a href="{{site.url}}#resume">Experience</a>
           </li>
           <li class="page-scroll">
-            <a href="{{ '#portfolio' | absolute_url }}">Portfolio</a>
+            <a href="{{site.url}}#portfolio">Portfolio</a>
           </li>
           <li>
             <a href="/posts.html">Blog</a>
