Update location hash from JavaScript instead of using link href

--- a/_includes/experience-timeline.html
+++ b/_includes/experience-timeline.html
@@ -27,8 +27,7 @@
                     <div class="cd-date">{{experience.dates}}</div>
                 </div>
 
-                <a
-                    href='#{{experience_id}}'
+                <button
                     class="btn btn-default cd-timeline-collapse-toggle"
                     data-toggle="collapse"
                     data-target="#{{experience_id}}-collapse"
@@ -36,7 +35,7 @@
                     aria-controls="{{experience_id}}-collapse"
                 >
                     <!-- Content set via JS -->
-                </a>
+                </button>
             </div>
             
             <div class="collapse" id="{{experience_id}}-collapse">
