Display project name instead of URL and always use https

--- a/_includes/experience-timeline.html
+++ b/_includes/experience-timeline.html
@@ -69,7 +69,7 @@
                                 {% endfor %}
 
                                 {% for project in experience.external_projects %}
-                                    <li><a href="http://{{project.url}}" title='{{project.name}} Website'>{{project.url}}</a></li>
+                                    <li><a href="https://{{project.url}}">{{project.name}}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
