Replace Google Analytics code with Plausible

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,14 +9,8 @@
   </script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
 
-  <!-- Google Analytics -->
-  <script>
-    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', '{{site.google_analytics_code}}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
-  <!-- End Google Analytics -->
+  <!-- Plausible Analytics -->
+  <script async defer data-domain="markmonteiro.info" src="https://plausible.markmonteiro.info/js/plausible.js"></script>
 
   {% seo %}
   <meta name="author" content="Mark Monteiro">
