Use HTTPS wherever possible

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Loading bar (http://github.hubspot.com/pace/) -->
+  <!-- Loading bar (https://github.hubspot.com/pace/) -->
   <script>
     paceOptions = { restartOnPushState: false }
   </script>
@@ -15,7 +15,7 @@
   {% seo %}
   <meta name="author" content="Mark Monteiro">
 
-  <!-- Favicon/Icon stuff for each platform (http://realfavicongenerator.net) -->
+  <!-- Favicon/Icon stuff for each platform (https://realfavicongenerator.net) -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/logo/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/img/logo/apple-touch-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/img/logo/apple-touch-icon-72x72.png">
@@ -35,7 +35,7 @@
   <meta name="msapplication-TileImage" content="/img/logo/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+  <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: https://bootswatch.com/flatly/ -->
   <link async href="//cdn.jsdelivr.net/bootswatch/3.3.2/flatly/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
