--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -30,5 +30,5 @@ $screen-md-max: ($screen-lg-min - 1);
 /// Relative or absolute URL where all assets are served from
 /// @type String
 /// @example scss - When using a CDN
-///   $base-url: 'http://cdn.example.com/assets/';
+///   $base-url: 'https://cdn.example.com/assets/';
 $base-url: '/' !default;
