--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <script>
     paceOptions = { restartOnPushState: false }
   </script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
 
   <!-- Plausible Analytics -->
   <script async defer data-domain="markmonteiro.info" src="https://plausible.markmonteiro.info/js/plausible.js"></script>
@@ -36,7 +36,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: https://bootswatch.com/flatly/ -->
-  <link async href="//cdn.jsdelivr.net/bootswatch/3.3.2/flatly/bootstrap.min.css" rel="stylesheet">
+  <link async href="https://cdn.jsdelivr.net/bootswatch/3.3.2/flatly/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link async href="/css/site.css" rel="stylesheet">
@@ -49,7 +49,7 @@
   {% endif %}
 
   <!-- Custom Fonts -->
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/fontawesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/fontawesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
 
